fix: :hammer: columns-buttons  fix layout issues with columns and button alignment
 Adjust column structure and button positioning to ensure proper layout
 and visual consistency across the pages. This correction improves the
 responsiveness and overall user interface design.

by@KarolainReyes

--- a/css/styleAdmin.css
+++ b/css/styleAdmin.css
@@ -229,6 +229,7 @@ h2 {
 }
 
 .info-juego {
+    padding: 2vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -236,6 +237,8 @@ h2 {
     width: 40%;
     gap: 5%;
 }
+
+
 
 .info-juego input{width: 100%;}
 
@@ -367,7 +370,7 @@ h2 {
     box-shadow: 0 3px 0 var(--color-pink-deep);
     text-transform: uppercase;
     letter-spacing: 1px;
-    width: 85vh;
+    width: 68vh;
 }
 
 /* ✨ Hover */
@@ -403,5 +406,5 @@ height: 70vh;
 #productos-container {
     max-height: 300px !important; /* antes 150px */
     overflow-y: auto;
-    width: 85vh
+
 }
